# deovr-json-gen

./: .env.example  .gitignore  .pre-commit-config.yaml  Dockerfile  LICENSE.md  README.md  docker-compose.yml  docker_start.sh  main.py  nginx.conf  pyproject.toml
.github/workflows/: ci.yml
